# sem2-lab4

./: CMakeLists.txt  Errors.h  Menu.h  Set.h  SetTest.h  Tree.h  TreeTest.h  main.cpp  student.h
